Unexpected result in Compositor with Filter Node and Scale Node used to distort Clouds Texture #52927

Closed
opened 2017-09-28 00:17:29 +02:00 by Rumen Belev · 6 comments

System Information
Windows 8.1, Nvidia GTX 760 M

Blender Version
Broken: 2.79 5bd8ac9

Short description of error

Using Filter node as Image input to Scale node and Texture node as input to X and Y offsets of Scale node renders empty image.

Exact steps for others to reproduce the error

Switch to Compositing
Add Texture node with Clouds texture
Add Filter Node with Sobel on
Add Scale Node with Relative on
Add Viewer node
Enable Backdrop
Connect Images of Texture To Sobel To Scale To Viewer
Connect Texture Color output to X input of Scale node
After that in my case - the Backdrop is empty. Viewer Node in Image Editor is transparent or black if disabled Use Alpha.

File with the node setup:
compositing_nodes_bug.blend

System Information Windows 8.1, Nvidia GTX 760 M Blender Version Broken: 2.79 5bd8ac9 Short description of error Using Filter node as Image input to Scale node and Texture node as input to X and Y offsets of Scale node renders empty image. Exact steps for others to reproduce the error Switch to Compositing Add Texture node with Clouds texture Add Filter Node with Sobel on Add Scale Node with Relative on Add Viewer node Enable Backdrop Connect Images of Texture To Sobel To Scale To Viewer Connect Texture Color output to X input of Scale node After that in my case - the Backdrop is empty. Viewer Node in Image Editor is transparent or black if disabled Use Alpha. File with the node setup: [compositing_nodes_bug.blend](https://archive.blender.org/developer/F892017/compositing_nodes_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @syziph

Added subscriber: @syziph
Member

Added subscribers: @Sergey, @LazyDodo

Added subscribers: @Sergey, @LazyDodo
Sergey Sharybin was assigned by Ray molenkamp 2017-09-28 17:59:16 +02:00
Member

Seems to be a follow up of #51705 , @Sergey can you take a look?

Seems to be a follow up of #51705 , @Sergey can you take a look?

This issue was referenced by 64c1a48c50

This issue was referenced by 64c1a48c50f45baee8a42edcf15e960017875014

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52927
No description provided.